<resources>
    <string name="app_name">Ambulance Tracker</string>
    <string name="title_activity_maps">Ambulance Tracker</string>
    <string name="title_activity_name">Ambulance Tracker</string>
    <string name="gps_network_not_enabled">GPS Network Not Enabled</string>
    <string name="open_location_settings">Open Location Settings</string>
    <string name="Cancel">Cancel</string>
    <string name="buttonService">Login as Service</string>
    <string name="buttonPassenger">Find an Ambulance</string>
    <string name="registerButton">Register</string>
    <string name="callButton">Call</string>
    <string name="btnDone">Login</string>
    <string name="etID">Enter ID</string>
    <string name="passengerHint">Your Location is Displayed as a Blue Dot on the Map When You Have GPS. Long Click on Ambulance Marker to Call Them.</string>
    <string name="about">about</string>
    <string name="ambulancenametxt">St. John Ambulance</string>
    <string name="ambulancetelephonetxt">0771234567</string>
    <string name="ambulancedesctxt">(Optional--mostly vehicle number)</string>
    <string name="regambulancebtn">Register Ambulance</string>
    <string name="textView8">Register Your Ambulance as a Service :</string>
    <string name="developedby">Developed By : Isuri Perera \n \n FAQ: \n My location not shown? \n Enable Location permission from the application settings \n \n I cannot call a number? \n Enable Phone permission from the application settings</string>
    <string name="version">Version 1.0.0</string>
    <string name="appname">Ambulance Tracker</string>
    <string name="copyright">All Right Reserved © 2017</string>
    <string name="mainimageresource">main image of application</string>
    <string name="logintext">Login</string>
    <string name="notregisteredtext">Not Registered Yet? Register Now..!</string>
    <string name="ambulanceservicenametextview">Service Name</string>
    <string name="ambulancetelephonetextview">Telephone</string>
    <string name="ambulancedesctextview">Description</string>
    <string name="title_activity_maps_xx">Map</string>
    <string name="title_activity_maps_xz">Map</string>
</resources>
